senzr-infra/infra/helm/directus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: directus-service
spec:
  selector:
    app: directus
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8055
  type: LoadBalancer
