senzr-infra/infra/helm/directus/kong-directus-config.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: directus-api-ingress
  namespace: kong
  annotations:
    konghq.com/strip-path: "true"
    konghq.com/plugins: cors
    konghq.com/override-service: directus-service.directus.svc
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: directus-service
            port:
              number: 8055
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: directus-admin-ingress
  namespace: kong
  annotations:
    konghq.com/strip-path: "true"
    konghq.com/plugins: cors
    konghq.com/override-service: directus-service.directus.svc
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /directus
        pathType: Prefix
        backend:
          service:
            name: directus-service
            port:
              number: 8055
