senzr-infra/infra/helm/directus/network-policy.yaml
# directus-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: directus-policy
spec:
  podSelector:
    matchLabels:
      app: directus
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: kong
      ports:
        - protocol: TCP
          port: 8055
